[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://Area.tscn" type="PackedScene" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="EnemySpawner" parent="." instance=ExtResource( 1 )]
position = Vector2( 250, 0 )
identity = "enemy_spawner"

[node name="PlayerSpawner" parent="." instance=ExtResource( 1 )]
position = Vector2( -250, 0 )
identity = "player_spawner"

[node name="PathPoints" type="Node" parent="."]

[node name="PathArea" parent="." instance=ExtResource( 4 )]
identity = "path"
